# dbfacade

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  TODO.md  claude-runner.sh  main.py  mypy.ini  pyproject.toml  test_debug.py
examples/: api_client.py  encrypted_model.py  user_model.py
scripts/hooks/: check_blanket_exception.py  check_semantic_leakage.py
src/indaleko_dbfacade/: __init__.py  config.py  db_facade_service.py
src/indaleko_dbfacade/db/: __init__.py  arangodb.py
src/indaleko_dbfacade/encryption/: __init__.py  field_encryptor.py
src/indaleko_dbfacade/models/: __init__.py  obfuscated_model.py
src/indaleko_dbfacade/registry/: __init__.py  client.py
src/indaleko_dbfacade/service/: __init__.py  api.py
tests/: conftest.py  test_config.py  test_db_facade_service.py
tests/encryption/: test_field_encryptor.py
tests/models/: test_encrypted_model.py  test_obfuscated_model.py
tests/service/: test_api.py
